Change config file

--- a/_config.yml
+++ b/_config.yml
@@ -1,292 +1,296 @@
-###########################################################
-### Welcome to Beautiful Jekyll!
-### This config file is meant for settings that affect your entire website. When you first
-### set up your website you should go through all these settings and edit them, but after
-### the initial set up you won't need to come back to this file often.
-###########################################################
-
-############################
-# --- Required options --- #
-############################
-
-# Name of website
-title: My Website
-
-# Your name to show in the footer
-author: Some Person
-
-###############################################
-# --- List of links in the navigation bar --- #
-###############################################
-
-navbar-links:
-  About Me: "aboutme"
-  Resources:
-    - Beautiful Jekyll: "https://beautifuljekyll.com"
-    - Learn markdown: "https://www.markdowntutorial.com/"
-  Author's home: "https://deanattali.com"
-
-################
-# --- Logo --- #
-################
-
-# Image to show in the navigation bar - works best with a square image
-# Remove this parameter if you don't want an image in the navbar
-avatar: "/assets/img/avatar-icon.png"
-
-# By default, the image is cut into a circle. You can disable this behaviour by setting 'round-avatar: false'
-round-avatar: true
-
-# If you want to have an image logo in the top-left corner instead of having the title of the website,
-# then specify the following parameter
-#title-img: /path/to/image
-
-
-#####################################
-# --- Footer social media links --- #
-#####################################
-
-# Select the social network links that you want to show in the footer.
-# Uncomment the links you want to show and add your information to each one.
-social-network-links:
-  email: "someone@example.com"
-  rss: true  # remove this line if you don't want to show an RSS link at the bottom
-  facebook: deanattali
-  github: daattali
-  twitter: daattali
-  patreon: DeanAttali
-  youtube: c/daattali
-#  medium: yourname
-#  reddit: yourname
-#  linkedin: daattali
-#  xing: yourname
-#  stackoverflow: "3943160/daattali"
-#  snapchat: deanat78
-#  instagram: deanat78
-#  spotify: yourname
-#  telephone: +14159998888
-#  steam: deanat78
-#  twitch: yourname
-#  yelp: yourname
-#  telegram: yourname
-#  calendly: yourname
-#  mastodon: instance.url/@username
-#  ORCID: your ORCID ID
-#  google-scholar: your google scholar
-#  discord: invite/invite_code or users/userid 
-#  kaggle: yourname
-#  hackerrank: yourname
-
-# If you want your website to generate an RSS feed, provide a description
-# The URL for the feed will be https://<your_website>/feed.xml
-rss-description: This website is a virtual proof that I'm awesome
-
-###########################
-# --- General options --- #
-###########################
-
-# Select which social network share links to show in posts
-share-links-active:
-  twitter: true
-  facebook: true
-  linkedin: true
-  vk: false
-
-# How to display the link to your website in the footer
-# Remove this if you don't want a link in the footer
-url-pretty: "MyWebsite.com"
-
-# Excerpt word length - Truncate the excerpt of each post on the feed page to the specified number of words
-excerpt_length: 50
-
-# Whether or not to show an excerpt for every blog post in the feed page
-feed_show_excerpt: true
-
-# Whether or not to show a list of tags below each post preview in the feed page
-feed_show_tags: true
-
-# Add a search button to the navbar
-post_search: true
-
-# Add a button in the footer to edit the current page. Only works if your website is hosted on GitHub
-edit_page_button: true
-
-# Allow sub-menu items (second-level navigation menu items) to be longer than the top-level menu
-# If this setting is off, then long sub-menu words might get cut off
-# See https://github.com/daattali/beautiful-jekyll/issues/765 to understand the issue this setting can solve
-navbar-var-length: false
-
-# The keywords to associate with your website, for SEO purposes
-#keywords: "my,list,of,keywords"
-
-######################################
-# --- Colours / background image --- #
-######################################
-
-# Personalize the colours in your website. Colour values can be any valid CSS colour
-
-navbar-col: "#EAEAEA"
-navbar-text-col: "#404040"
-navbar-border-col: "#DDDDDD"
-page-col: "#FFFFFF"
-text-col: "#404040"
-link-col: "#008AFF"
-hover-col: "#0085A1"
-footer-col: "#EAEAEA"
-footer-text-col: "#777777"
-footer-link-col: "#404040"
-footer-hover-col: "#0085A1"
-
-# Alternatively, the navbar, footer, and page background can be set to an image
-# instead of colour
-
-#navbar-img: "/assets/img/bgimage.png"
-#footer-img: "/assets/img/bgimage.png"
-#page-img: "/assets/img/bgimage.png"
-
-# Suggest a colour for mobile browsers to use as the browser's theme. This is only supported by a few mobile browsers.
-#mobile-theme-col: "#0085A1"
-
-# For any extra visual customization, you can include additional CSS files in every page on your site. List any custom CSS files here
-#site-css:
-#  - "/assets/css/custom-styles.css"
-
-# If you have common JavaScript files that should be included in every page, list them here
-#site-js:
-#  - "/assets/js/custom-script.js"
-
-#################################
-# --- Web Analytics Section --- #
-#################################
-
-# Fill in your Google Analytics gtag.js ID to track your website using gtag
-#gtag: ""
-
-# Fill in your Google Analytics ID to track your website using Google Analytics
-#google_analytics: ""
-
-# Fill in your Cloudflare Analytics beacon token to track your website using Cloudflare Analytics
-#cloudflare_analytics: ""
-
-# Google Tag Manager ID
-#gtm: ""
-
-# Matomo (aka Piwik) Web statistics
-# Uncomment the following section to enable Matomo. The opt-out parameter controls
-# whether or not you want to allow users to opt out of tracking.
-#matomo:
-#  site_id: "9"
-#  uri: "demo.wiki.pro"
-#  opt-out: true
-
-####################
-# --- Comments --- #
-####################
-
-# To use Disqus comments, sign up to https://disqus.com and fill in your Disqus shortname (NOT the userid)
-#disqus: ""
-
-# To use Facebook Comments, create a Facebook app and fill in the Facebook App ID
-#fb_comment_id: ""
-
-# To use CommentBox, sign up for a Project ID on https://commentbox.io
-#commentbox: "" # Project ID, e.g. "5694267682979840-proj"
-
-# To use Utterances comments: (0) uncomment the following section, (1) fill in
-# "repository" (make sure the repository is public), (2) Enable Issues in your repository,
-# (3) Install the Utterances app in your repository https://github.com/apps/utterances
-# See more details about the parameters below at https://utteranc.es/
-#utterances:
-#  repository: # GitHub username/repository eg. "daattali/beautiful-jekyll"
-#  issue-term: title   # Mapping between blog posts and GitHub issues
-#  theme: github-light # Utterances theme
-#  label: blog-comments # Label that will be assigned to GitHub Issues created by Utterances
-
-# To use Staticman comments, uncomment the following section. You may leave the reCaptcha
-# section commented if you aren't using reCaptcha for spam protection. 
-# Using Staticman requires advanced knowledge, please consult 
-# https://github.com/eduardoboucas/staticman/ and https://staticman.net/ for further 
-# instructions. For any support with staticman please direct questions to staticman and 
-# not to BeautifulJekyll.
-#staticman:
-#  repository : # GitHub username/repository eg. "daattali/beautiful-jekyll"
-#  branch     : master # If you're not using `master` branch, then you also need to update the `branch` parameter in `staticman.yml`
-#  endpoint   : # URL of your deployment, with a trailing slash eg. "https://<your-api>/v3/entry/github/"
-#  reCaptcha:   # (optional, set these parameters in `staticman.yml` as well) 
-#    siteKey  : # You need to apply for a site key on Google
-#    secret   : # Encrypt your password by going to https://<your-own-api>/v3/encrypt/<your-site-secret>
-
-# To use giscus comments:
-# (0) Uncomment the following giscus section, (1) Enable Discussions in your GitHub repository, 
-# (2) Install the giscus app in your repository (details at https://giscus.app),
-# (3) Fill in *all* the parameters below 
-# See more details about giscus and each of the following parameters at https://giscus.app
-#giscus:
-#  hostname: giscus.app # Replace with your giscus instance's hostname if self-hosting
-#  repository: # GitHub username/repository eg. "daattali/beautiful-jekyll"
-#  repository-id: # ID of your repository, retrieve this info from https://giscus.app
-#  category: Announcements # Category name of your GitHub Discussion posts
-#  category-id: # ID of your category, retrieve this info from https://giscus.app
-#  mapping: pathname
-#  reactions-enabled: 1
-#  emit-metadata: 0
-#  theme: light
-
-################
-# --- Misc --- #
-################
-
-# Ruby Date Format to show dates of posts
-date_format: "%B %-d, %Y"
-
-# Facebook App ID
-#fb_app_id: ""
-
-#################################################################################
-# --- You don't need to touch anything below here (but you can if you want) --- #
-#################################################################################
-
-# Output options (more information on Jekyll's site)
-timezone: "America/Toronto"
-markdown: kramdown
-highlighter: rouge
-permalink: /:year-:month-:day-:title/
-paginate: 5
-
-kramdown:
-  input: GFM
-
-# Default YAML values (more information on Jekyll's site)
-defaults:
-  -
-    scope:
-      path: ""
-      type: "posts"
-    values:
-      layout: "post"
-      comments: true  # add comments to all blog posts
-      social-share: true # add social media sharing buttons to all blog posts
-  -
-    scope:
-      path: "" # any file that's not a post will be a "page" layout by default
-    values:
-      layout: "page"
-
-# Exclude these files from production site
-exclude:
-  - CHANGELOG.md
-  - CNAME
-  - Gemfile
-  - Gemfile.lock
-  - LICENSE
-  - README.md
-  - screenshot.png
-  - docs/
-
-plugins:
-  - jekyll-paginate
-  - jekyll-sitemap
-
-# Beautiful Jekyll / Dean Attali
-# 2fc73a3a967e97599c9763d05e564189
-
+title: GitHub Pages
+tagline: Your sidekick in using GitHub Pages and blogs
+description: >-
+  Learn how to create a site or blog from your GitHub repositories with GitHub
+  Pages.
+tags:
+  - GitHub
+  - GitHub Pages
+template:
+  name: github-pages-with-jekyll
+  repo: github-pages-with-jekyll-template
+preferences:
+  - type: dropdown
+    name: language
+    label: Language
+    description: Choose your preferred language.
+    options:
+      - label: English
+        value: en
+      - label: Español
+        value: es
+before:
+  - type: createIssue
+    title: Welcome
+    body: 00_class-introduction-issue.md
+steps:
+  - title: Generate a GitHub Pages site
+    description: Generate a GitHub Pages site with the automatic page generator.
+    translations:
+      es:
+        title: Activa GitHub Pages
+        description: >-
+          Gnera un sitio web con el generador automático de páginas GitHub
+          Pages.
+    event: page_build
+    link: '{{ repoUrl }}/issues/1'
+    actions:
+      - type: octokit
+        method: repos.getPages
+        owner: '%payload.repository.owner.login%'
+        repo: '%payload.repository.name%'
+        action_id: pagesUrl
+      - type: respond
+        issue: 1
+        with: 01_update-index.md
+        data:
+          deploymentUrl: '%actions.pagesUrl.data.html_url%'
+      - type: updateBranchProtection
+  - title: Customize your homepage
+    description: Open a pull request with changes to the homepage.
+    translations:
+      es:
+        title: Personaliza tu página inicial
+        description: Abre un pull request con cambios en la página inicial.
+    event: pull_request.opened
+    link: '{{ repoUrl }}/issues'
+    actions:
+      - type: gate
+        left: '%payload.pull_request.body%'
+        required: false
+        else:
+          type: respond
+          with: 02_pull-request-blank.md
+      - type: getTree
+        action_id: tree
+        sha: '%payload.pull_request.head.sha%'
+      - type: createReview
+        body: 02_merge-pr.md
+        event: APPROVE
+        data:
+          branch: '%payload.pull_request.head.ref%'
+      - type: closeIssue
+        issue: Welcome
+  - title: Merge your pull request
+    description: Merge the pull request that customizes your homepage.
+    translations:
+      es:
+        title: Combina tu pull request
+        description: Combina el pull request que personaliza tu página inicial.
+    event: pull_request.closed
+    link: '{{ repoUrl }}/pulls'
+    actions:
+      - type: gate
+        left: '%payload.pull_request.merged%'
+      - type: gate
+        left: '%payload.pull_request.base.ref%'
+        operator: ===
+        right: main
+      - type: updateBranchProtection
+      - type: octokit
+        method: repos.getPages
+        owner: '%payload.repository.owner.login%'
+        repo: '%payload.repository.name%'
+        action_id: pagesUrl
+      - type: createIssue
+        action_id: issue
+        title: Getting ready to blog
+        body: 03_change-theme.md
+        data:
+          deploymentUrl: '%actions.pagesUrl.data.html_url%'
+      - type: respond
+        with: 03_merged-pr.md
+        data:
+          url: '%actions.issue.data.html_url%'
+  - title: Customize site details
+    description: Edit the configuration file to display your information.
+    translations:
+      es:
+        title: Personaliza los detalles del sitio
+        description: Edita el archivo de configuración para mostrar tu información.
+    event: pull_request
+    link: '{{ repoUrl }}/issues'
+    actions:
+      - type: gate
+        gates:
+          - left: '%payload.action%'
+            operator: ===
+            right: opened
+          - left: '%payload.action%'
+            operator: ===
+            right: synchronize
+      - type: gate
+        required: false
+        left: '%payload.action%'
+        operator: '!=='
+        right: opened
+        else:
+          type: closeIssue
+          issue: Getting ready to blog
+      - type: gate
+        required: false
+        left: '%payload.pull_request.body%'
+        else:
+          type: respond
+          with: 02_pull-request-blank.md
+      - type: getFileContents
+        filename: _config.yml
+        action_id: file
+      - type: gate
+        left: '/^theme:\s?minima$/m'
+        operator: test
+        right: '%actions.file%'
+        else:
+          type: createReview
+          event: REQUEST_CHANGES
+          body: 04_wrong-theme.md
+      - type: createReview
+        event: COMMENT
+        body: 04_create-blog-post.md
+        data:
+          branch: '%payload.pull_request.head.ref%'
+          date: '%payload.pull_request.created_at%'
+  - title: Create a blog post
+    description: Create a new file that will become your first blog post.
+    translations:
+      es:
+        title: Crea un post
+        description: Crea un nuevo archivo que se convertirá en el primer post de tu blog.
+    event: pull_request.synchronize
+    link: '{{ repoUrl }}/pulls'
+    actions:
+      - type: getTree
+        action_id: tree
+        recursive: true
+        sha: '%payload.pull_request.head.sha%'
+      - type: gate
+        action_id: directory
+        required: false
+        left: '%actions.tree.data.tree%'
+        operator: includes
+        right: 'path:/^_posts/'
+      - type: gate
+        action_id: filenumber
+        required: false
+        left: '%actions.tree.data.tree%'
+        operator: includes
+        right: 'path:/\d{4}-\d{2}-\d{2}/'
+      - type: gate
+        action_id: post
+        required: false
+        left: '%actions.tree.data.tree%'
+        operator: includes
+        right: 'path:/[a-zA-Z]\.md$/'
+      - type: gate
+        action_id: extension
+        required: false
+        left: '%actions.tree.data.tree%'
+        operator: includes
+        right: 'path:/\.md$/'
+      - type: gate
+        action_id: filename
+        required: false
+        left: '%actions.tree.data.tree%'
+        operator: includes
+        right: 'path:/(^|\/)\d{4}-\d{2}-\d{2}-.*\.md$/'
+      - type: gate
+        every: true
+        gates:
+          - left: '%actions.directory%'
+          - left: '%actions.filenumber%'
+          - left: '%actions.post%'
+          - left: '%actions.extension%'
+          - left: '%actions.filename%'
+        else:
+          - type: createReview
+            body: 05_incorrect-post.md
+            event: REQUEST_CHANGES
+            data:
+              directory: '%actions.directory%'
+              filenumber: '%actions.filenumber%'
+              post: '%actions.post%'
+              extension: '%actions.extension%'
+              filename: '%actions.filename%'
+      - type: createReview
+        body: 05_add-front-matter.md
+        event: COMMENT
+  - title: Add blog post metadata
+    description: Add YAML front matter to the blog post to display the title and date.
+    translations:
+      es:
+        title: Añade metadatos al post
+        description: Añade texto preliminar YAML al post para mostrar el título y la fecha.
+    event: pull_request.synchronize
+    link: '{{ repoUrl }}/pulls'
+    actions:
+      - type: getTree
+        action_id: tree
+        recursive: true
+        sha: '%payload.pull_request.head.sha%'
+      - type: findInTree
+        action_id: file
+        tree: '%actions.tree.data.tree%'
+        path: '/^_posts\/\d{4}-\d{2}-\d{2}-.*\.md$/'
+      - type: getFileContents
+        filename: '%actions.file.path%'
+        action_id: contents
+      - type: gate
+        required: false
+        action_id: dashes
+        left: '/^-{3}[\s\S]+-{3}/'
+        operator: test
+        right: '%actions.contents%'
+      - type: gate
+        required: false
+        action_id: title
+        left: '/^title:\s?["''].+["'']$/m'
+        operator: test
+        right: '%actions.contents%'
+      - type: gate
+        required: false
+        action_id: date
+        left: '/^date:\s?\d{4}-\d{2}-\d{2}/m'
+        operator: test
+        right: '%actions.contents%'
+      - type: gate
+        every: true
+        gates:
+          - left: '%actions.dashes%'
+          - left: '%actions.title%'
+          - left: '%actions.date%'
+        else:
+          - type: createReview
+            body: 06_incorrect-front-matter.md
+            event: REQUEST_CHANGES
+            data:
+              date: '%actions.date%'
+              title: '%actions.title%'
+              dashes: '%actions.dashes%'
+      - type: removeBranchProtection
+      - type: createReview
+        body: 06_merge-and-celebrate.md
+        event: APPROVE
+  - title: Merge your first post
+    description: >-
+      Merge the pull request so your blog post will appear on your GitHub Pages
+      site.
+    translations:
+      es:
+        title: Combina tu primer post
+        description: >-
+          Combina el pull request para que tu post aparezca en tu sitio de
+          GitHub Pages.
+    event: pull_request.closed
+    link: '{{ repoUrl }}/pulls'
+    actions:
+      - type: octokit
+        method: repos.getPages
+        owner: '%payload.repository.owner.login%'
+        repo: '%payload.repository.name%'
+        action_id: pagesUrl
+      - type: gate
+        left: '%payload.pull_request.merged%'
+      - type: respond
+        with: 07_next-steps.md
+        data:
+          deploymentUrl: '%actions.pagesUrl.data.html_url%'
